Add Navbar Links and Footer Links to config.

--- a/ui/templates/z-footer.html
+++ b/ui/templates/z-footer.html
@@ -5,12 +5,11 @@
 
         <div class="row footer text-gray">
             <nav class="site-nav">
-                <p><a class="plain" href="{{.SiteUrl}}/">Home</a></p><span>&sdot;</span>
-                <!-- <p><a class="plain" href="{{.SiteUrl}}/about/">About Us</a></p><span>&sdot;</span>
-                <p><a class="plain" href="{{.SiteUrl}}/contact/">Contact</a></p><span>&sdot;</span>
-                <p><a class="plain" href="{{.SiteUrl}}/privacy-policy/">Privacy Policy</a></p><span>&sdot;</span>
-                <p><a class="plain" href="{{.SiteUrl}}/terms-of-service/">Terms of Service</a></p>
-                <p><a class="plain" href="{{.SiteUrl}}/sitemap/">Sitemap</a></p><span>&sdot;</span> -->
+                {{$siteUrl := .SiteUrl}}
+                {{range .FooterLinks}}
+                    <p><a class="plain" href="{{$siteUrl}}{{.Route}}">{{.Text}}</a></p>
+                    <span>&sdot;</span>
+                {{end}}
             </nav>
 
             <p>Copyright &copy; {{.Copyright}} All Rights Reserved</p>
