--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -15,7 +15,7 @@
                     {{range .FeaturedPosts}}
                         <div>
                             <a href="{{$siteUrl}}/{{.Slug}}/">
-                                <img width="800" height="450" class="drop-shadow" src="{{$siteUrl}}{{.ImageUrl}}" alt="{{.ImageAlt}}">
+                                <img width="{{.Image.Width}}" height="{{.Image.Height}}" class="drop-shadow" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
                                 <p class="title">{{.Heading}}</p>
                             </a>
                             <p class="subhead text-dark-gray">{{.Description}}</p>
@@ -30,7 +30,7 @@
                     {{range .LatestPosts}}
                         <div>
                             <a href="{{$siteUrl}}/{{.Slug}}/">
-                                <img width="800" height="450" class="drop-shadow" src="{{$siteUrl}}{{.ImageUrl}}" alt="{{.ImageAlt}}">
+                                <img width="{{.Image.Width}}" height="{{.Image.Height}}" class="drop-shadow" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
                                 <p class="title">{{.Heading}}</p>
                             </a>
                             <p class="subhead text-dark-gray">{{.Description}}</p>
