--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,6 +1,41 @@
 {{define "index"}}
 {{template "page" .}}
-<div class="container">
+<div class="w-full mx-auto sm:max-w-3xl lg:max-w-5xl xl:max-w-6xl px-5">
+    {{$siteUrl := .SiteUrl}}
+
+    {{if .FeaturedPosts}}
+    <h2 class="font-bold text-3xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Featured</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20 hide-last">
+        {{range .FeaturedPosts}}
+        <div>
+            <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
+                <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
+                <p class="text-lg leading-relaxed text-slate-800 font-semibold pt-1">{{.Heading}}</p>
+            </a>
+            <p class="text-sm leading-relaxed text-slate-700 mt-4">{{.Description}}</p>
+        </div>
+        {{end}}
+    </div>
+    {{end}}
+
+    {{if .LatestPosts}}
+    <h2 class="font-bold text-3xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Latest Posts</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20 hide-last">
+        {{range .LatestPosts}}
+        <div>
+            <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
+                <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
+                <p class="text-lg leading-relaxed text-slate-800 font-semibold pt-1">{{.Heading}}</p>
+            </a>
+            <p class="text-sm leading-relaxed text-slate-700 mt-4">{{.Description}}</p>
+        </div>
+        {{end}}
+    </div>
+    {{end}}
+</div>
+
+
+<div class="hidden container">
     <div class="row">
         <div class="primary-full home">
             {{$siteUrl := .SiteUrl}}
@@ -11,7 +46,7 @@
 
             {{if .FeaturedPosts}}
                 <h2 class="section-title-xl underline">Featured</h2>
-                <div class="results-grid hide-last" style="margin-bottom:6rem;">
+                <div class="hidden results-grid hide-last" style="margin-bottom:6rem;">
                     {{range .FeaturedPosts}}
                         <div>
                             <a href="{{$siteUrl}}/{{.Slug}}/">
@@ -26,7 +61,7 @@
 
             {{if .LatestPosts}}
                 <h2 class="section-title-xl underline">Latest Posts</h2>
-                <div class="results-grid hide-last">
+                <div class="hidden results-grid hide-last">
                     {{range .LatestPosts}}
                         <div>
                             <a href="{{$siteUrl}}/{{.Slug}}/">
