--- a/assets/templates/category.html
+++ b/assets/templates/category.html
@@ -10,9 +10,9 @@
         <div>
             <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
                 <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
-                <p class="text-lg leading-relaxed text-slate-800 font-semibold pt-1">{{.Heading}}</p>
+                <p class="text-lg leading-relaxed text-black font-semibold pt-1">{{.Heading}}</p>
             </a>
-            <p class="text-sm leading-relaxed text-slate-700 mt-4">{{.Description}}</p>
+            <p class="text-sm leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
         </div>
         {{end}}
     </div>
