--- a/assets/templates/z-head.html
+++ b/assets/templates/z-head.html
@@ -8,7 +8,7 @@
     {{if .AppDebug}}
         <script src="https://cdn.tailwindcss.com"></script>
     {{else}}
-        <link rel="stylesheet" href="/static/styles.css">
+        <link rel="stylesheet" href="/styles.css">
     {{end}}
 
     <title>{{.Title}}</title>
