Use partial template for rendering the post grid. Sort posts BEFORE preparing them by category.

--- a/assets/templates/error.html
+++ b/assets/templates/error.html
@@ -46,18 +46,12 @@
 
 
     <!-- Latest Articles -->
-    <hr class="my-12">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20 hide-last">
-        {{range .LatestPosts}}
-        <div>
-            <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
-                <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
-                <p class="text-lg leading-relaxed text-black font-semibold pt-1">{{.Heading}}</p>
-            </a>
-            <p class="text-sm leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
-        </div>
-        {{end}}
-    </div>
+    {{if .LatestPosts}}
+        <hr class="my-12">
+        <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Latest Posts</h2>
+        {{template "post-grid" .LatestPosts}}
+    {{end}}
+
 </div>
 {{template "endpage" .}}
 {{end}}
