--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,39 +1,18 @@
 {{define "index"}}
 {{template "page" .}}
 <div class="w-full mx-auto sm:max-w-3xl lg:max-w-5xl xl:max-w-6xl px-5">
-    {{$siteUrl := .SiteUrl}}
-
 
     {{if .FeaturedPosts}}
-    <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Featured</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20 hide-last">
-        {{range .FeaturedPosts}}
-        <div>
-            <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
-                <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
-                <p class="text-lg leading-relaxed text-black font-semibold pt-1">{{.Heading}}</p>
-            </a>
-            <p class="text-sm leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
-        </div>
-        {{end}}
-    </div>
+        <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Featured</h2>
+        {{template "post-grid" .FeaturedPosts}}
     {{end}}
 
 
     {{if .LatestPosts}}
-    <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Latest Posts</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12 mb-20 hide-last">
-        {{range .LatestPosts}}
-        <div>
-            <a class="flex flex-col space-y-3" href="{{$siteUrl}}/{{.Slug}}">
-                <img class="rounded drop-shadow" width="{{.Image.Width}}" height="{{.Image.Height}}" src="{{$siteUrl}}{{.Image.Url}}" alt="{{.Image.Alt}}">
-                <p class="text-lg leading-relaxed text-black font-semibold pt-1">{{.Heading}}</p>
-            </a>
-            <p class="text-sm leading-relaxed text-slate-700 mt-2">{{.Description}}</p>
-        </div>
-        {{end}}
-    </div>
+        <h2 class="font-bold text-4xl text-slate-800 underline decoration-indigo-600 leading-relaxed mb-7">Latest Posts</h2>
+        {{template "post-grid" .LatestPosts}}
     {{end}}
+
 </div>
 {{template "endpage" .}}
 {{end}}
